0.4.17/_sources/api/napari.components.Camera.rst
napari.components.Camera
========================

.. currentmodule:: napari.components

.. autoclass:: Camera
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Camera.calculate_nd_up_direction
   
   
      ~Camera.calculate_nd_view_direction
   
   
      ~Camera.construct
   
   
      ~Camera.copy
   
   
      ~Camera.dict
   
   
      ~Camera.enums_as_values
   
   
      ~Camera.from_orm
   
   
      ~Camera.json
   
   
      ~Camera.parse_file
   
   
      ~Camera.parse_obj
   
   
      ~Camera.parse_raw
   
   
      ~Camera.reset
   
   
      ~Camera.schema
   
   
      ~Camera.schema_json
   
   
      ~Camera.set_view_direction
   
   
      ~Camera.update
   
   
      ~Camera.update_forward_refs
   
   
      ~Camera.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Camera.events
      ~Camera.up_direction
      ~Camera.view_direction
      
      
      
      
      
   
   

   .. rubric:: Details