0.10.0/_sources/api/napari.components.Camera.rst
napari.components.Camera
========================

.. currentmodule:: napari.components

.. autoclass:: Camera
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Camera.calculate_nd_up_direction
   
   
      ~Camera.calculate_nd_view_direction
   
   
      ~Camera.construct
   
   
      ~Camera.copy
   
   
      ~Camera.dict
   
   
      ~Camera.enums_as_values
   
   
      ~Camera.from_orm
   
   
      ~Camera.json
   
   
      ~Camera.model_construct
   
   
      ~Camera.model_copy
   
   
      ~Camera.model_dump
   
   
      ~Camera.model_dump_json
   
   
      ~Camera.model_json_schema
   
   
      ~Camera.model_parametrized_name
   
   
      ~Camera.model_post_init
   
   
      ~Camera.model_rebuild
   
   
      ~Camera.model_validate
   
   
      ~Camera.model_validate_json
   
   
      ~Camera.model_validate_strings
   
   
      ~Camera.parse_file
   
   
      ~Camera.parse_obj
   
   
      ~Camera.parse_raw
   
   
      ~Camera.reset
   
   
      ~Camera.schema
   
   
      ~Camera.schema_json
   
   
      ~Camera.set_view_direction
   
   
      ~Camera.update
   
   
      ~Camera.update_forward_refs
   
   
      ~Camera.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Camera.events
      ~Camera.handedness
      ~Camera.model_computed_fields
      ~Camera.model_config
      ~Camera.model_extra
      ~Camera.model_fields
      ~Camera.model_fields_set
      ~Camera.orientation2d
      ~Camera.up_direction
      ~Camera.view_direction
      
      
      
      
      
      
      
      
   
   

   .. rubric:: Details